--- a/desafio4/src/views/layouts/main.handlebars
+++ b/desafio4/src/views/layouts/main.handlebars
@@ -14,5 +14,5 @@
 
 </body>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="/js/products.js"></script>
+    <script type="module" src="/js/products.js"></script>
 </html>
