--- a/desafio4/src/views/realtime.handlebars
+++ b/desafio4/src/views/realtime.handlebars
@@ -39,7 +39,7 @@
 </div>
 
 
-<div class="products">
+<div class="products" id="products">
     {{#each products}}
     <div class="cardProduct">
         <div class="imageProduct">
