--- a/EntregaIntegradora/src/views/carts.handlebars
+++ b/EntregaIntegradora/src/views/carts.handlebars
@@ -9,8 +9,7 @@
             <div class="infoCart">
                 <h3>{{this.title}}</h3>
                 <p>{{this.description}}</p>
-                <p>Precio: {{this.price}}</p>
-                <p>Stock: {{this.stock}}</p>
+                <p>${{this.price}}</p>
                 <p>Cantidad en el carrito: {{this.quantity}}</p>
             </div>
         </div>
