--- a/EntregaIntegradora/src/views/products.handlebars
+++ b/EntregaIntegradora/src/views/products.handlebars
@@ -7,7 +7,7 @@
         <div class="infoProduct">
             <h3>{{this.title}}</h3>
             <p>{{this.description}}</p>
-            <p>{{this.price}}</p>
+            <p>${{this.price}}</p>
             <p>{{this.code}}</p>
             <p>{{this.stock}}</p>
         </div>
