--- a/EntregaIntegradora/src/public/css/products.css
+++ b/EntregaIntegradora/src/public/css/products.css
@@ -2,6 +2,12 @@ body {
     font-family: 'Arial', sans-serif;
     background-color: #f2f2f2;
 }
+
+.title{
+    text-align: center;
+    margin: 20px;
+}
+
 .products {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -40,76 +46,4 @@ body {
 .infoProduct p {
     margin: 0.5rem 0;
     color: #34495e;
-}
-
-.add-delete {
-    display: flex;
-    justify-content: space-around;
-    margin: 20px;
-}
-
-form {
-    background-color: #ecf0f1;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    width: 45%;
-}
-
-form h3 {
-    background-color: #3498db;
-    color: #fff;
-    font-size: 1.5em;
-    margin: 0;
-    padding: 10px;
-    border-top-left-radius: 8px;
-    border-top-right-radius: 8px;
-}
-
-label {
-    display: block;
-    margin: 15px 0 8px;
-    color: #333;
-}
-
-input,
-textarea {
-    width: calc(100% - 30px);
-    padding: 8px;
-    margin-bottom: 15px;
-    box-sizing: border-box;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    font-size: 14px;
-}
-
-button {
-    background-color: #3498db;
-    color: #fff;
-    border: none;
-    padding: 10px 15px;
-    font-size: 16px;
-    cursor: pointer;
-    border-radius: 4px;
-    transition: background-color 0.3s;
-    margin: 15px;
-}
-
-button:hover {
-    background-color: #2980b9;
-}
-
-.add{
-    display: flex;
-    flex-direction: column;
-}
-.delete{
-    display: flex;
-    flex-direction: column;
-}
-.add div{
-    margin: 5px;
-}
-.delete div{
-    margin: 5px;
 }
