--- a/EntregaIntegradora/src/views/messages.handlebars
+++ b/EntregaIntegradora/src/views/messages.handlebars
@@ -1,4 +1,6 @@
-<div class="messages">
+<h1 class="title">Chat</h1>
+<div>
+    <div id="messages" class="messages">
     {{#each messages}}
     <div class="cardMessage">
         <div class="infoMessage">
@@ -7,4 +9,11 @@
         </div>
     </div>
     {{/each}}
+    <form id="addMessageForm">
+        <label>Mensaje:</label>
+        <input id="message" type="text" id="message" name="message" placeholder="Escribe tu mensaje aquí">
+
+        <button id="addMessage" type="submit">Enviar Mensaje</button>
+    </form>
+    </div>
 </div>
