--- a/EntregaIntegradora/src/public/css/messages.css
+++ b/EntregaIntegradora/src/public/css/messages.css
@@ -3,6 +3,11 @@ body {
     background-color: #f2f2f2;
 }
 
+.title{
+    text-align: center;
+    margin: 20px;
+}
+
 .messages {
     display: flex;
     flex-direction: column;
@@ -39,4 +44,46 @@ body {
 .infoMessage p {
     margin: 0.5rem 0;
     color: #34495e;
+}
+
+form {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 97.8%;
+    display: flex;
+    align-items: center;
+    padding: 20px;
+    background-color: #ecf0f1;
+    border: 1px solid #3498db;
+    border-radius: 8px;
+}
+
+label {
+    display: none;
+}
+
+input {
+    flex: 1;
+    padding: 10px;
+    box-sizing: border-box;
+    border: 1px solid #3498db;
+    border-radius: 4px;
+    font-size: 14px;
+    margin-right: 10px;
+}
+
+button {
+    background-color: #3498db;
+    color: #fff;
+    border: none;
+    padding: 10px 15px;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 4px;
+    transition: background-color 0.3s;
+}
+
+button:hover {
+    background-color: #2980b9;
 }
