--- a/EntregaIntegradora/src/views/layouts/main.handlebars
+++ b/EntregaIntegradora/src/views/layouts/main.handlebars
@@ -9,4 +9,6 @@
 <body>
     {{{body}}}
 </body>
+<script src="socket.io/socket.io.js"></script>
+<script src="/js/messages.js"></script>   
 </html>
