--- a/EntregaIntegradora/src/views/messages.handlebars
+++ b/EntregaIntegradora/src/views/messages.handlebars
@@ -11,7 +11,7 @@
     {{/each}}
     <form id="addMessageForm">
         <label>Mensaje:</label>
-        <input id="message" type="text" id="message" name="message" placeholder="Escribe tu mensaje aquí">
+        <input type="text" id="message" name="message" placeholder="Escribe tu mensaje aquí">
 
         <button id="addMessage" type="submit">Enviar Mensaje</button>
     </form>
