--- a/EntregaIntegradora/src/views/messages.handlebars
+++ b/EntregaIntegradora/src/views/messages.handlebars
@@ -17,5 +17,5 @@
         <button id="addMessage" type="submit">Enviar Mensaje</button>
     </form>
 </div>
-<script src="socket.io/socket.io.js"></script>
+<script src="/socket.io/socket.io.js"></script>
 <script src="/js/messages.js"></script>   
