--- a/EntregaIntegradora/src/views/products.handlebars
+++ b/EntregaIntegradora/src/views/products.handlebars
@@ -1,17 +1,28 @@
+<div class="products-container">
 <h1 class="title">Productos</h1>
-<div class="products">
-    {{#each products}}
-    <div class="cardProduct">
-        <div class="imageProduct">
-            <img src="{{this.thumbnail}}" alt="{{this.title}}">
+    <div class="products">
+        {{#each products}}
+        <div class="cardProduct">
+            <div class="imageProduct">
+                <img src="{{this.thumbnail}}" alt="{{this.title}}">
+            </div>
+            <div class="infoProduct">
+                <h3>{{this.title}}</h3>
+                <p>{{this.description}}</p>
+                <p>${{this.price}}</p>
+                <p>{{this.code}}</p>
+                <p>{{this.stock}}</p>
+            </div>
+            <button id="addProductToCart">Agregar al carrito</button>
         </div>
-        <div class="infoProduct">
-            <h3>{{this.title}}</h3>
-            <p>{{this.description}}</p>
-            <p>${{this.price}}</p>
-            <p>{{this.code}}</p>
-            <p>{{this.stock}}</p>
-        </div>
+        {{/each}}
     </div>
-    {{/each}}
 </div>
+        <div class="pagination-buttons">
+            {{#if hasPrevPage}}
+                <a class="left" href="/products?page={{prevPage}}"><button>Anterior</button></a>
+            {{/if}}
+            {{#if hasNextPage}}
+                <a class="right" href="/products?page={{nextPage}}"><button>Siguiente</button></a>
+            {{/if}}
+        </div>
