--- a/EntregaIntegradora/src/views/carts.handlebars
+++ b/EntregaIntegradora/src/views/carts.handlebars
@@ -4,12 +4,12 @@
         {{#each products}}
         <div class="cardCart">
             <div class="imageCart">
-                <img src="{{this.thumbnail}}" alt="{{this.title}}">
+                <img src="{{product.thumbnail}}" alt="{{product.title}}">
             </div>
             <div class="infoCart">
-                <h3>{{this.title}}</h3>
-                <p>{{this.description}}</p>
-                <p>${{this.price}}</p>
+                <h3>{{product.title}}</h3>
+                <p>{{product.description}}</p>
+                <p>${{product.price}}</p>
                 <p>Cantidad en el carrito: {{this.quantity}}</p>
             </div>
         </div>
