--- a/EntregaIntegradora/src/views/products.handlebars
+++ b/EntregaIntegradora/src/views/products.handlebars
@@ -1,5 +1,5 @@
 <div class="navbar">
-  <a href="../login" id="logout">Logout</a>
+  <a href="/login" id="logout">Logout</a>
 </div>
 <div class="products-container">
 <h1 class="title">Productos</h1>
@@ -29,3 +29,4 @@
                 <a class="right" href="/products?page={{nextPage}}"><button>Siguiente</button></a>
             {{/if}}
         </div>
+<script src="/js/products.js"></script>
