--- a/EntregaIntegradora/src/public/css/products.css
+++ b/EntregaIntegradora/src/public/css/products.css
@@ -1,74 +1,198 @@
-body {
-    font-family: 'Arial', sans-serif;
-    background-color: #f2f2f2;
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700;800;900&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Rubik', sans-serif;
 }
 
-.title{
-    text-align: center;
-    margin: 20px;
+h1, h2, h3, h4, h5, h6, p, a, input, textarea, ul {
+    margin: 0;
+    padding: 0;
 }
 
-.products {
+.foto{
+    width: 100px;
+    background-color: transparent;
+}
+
+ul {
+    list-style-type: none;
+}
+
+a {
+    text-decoration: none;
+}
+
+.wrapper {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 1rem;
+    grid-template-columns: 1fr 4fr;
+    background-color: #F4CBE3;
 }
 
-.cardProduct {
-    border: 1px solid #3498db;
-    padding: 1rem;
-    text-align: center;
-    background-color: #ecf0f1;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    transition: transform 0.3s;
-}
-
-.cardProduct:hover {
-    transform: scale(1.05);
-}
-
-.imageProduct img {
-    max-width: 100%;
-    height: auto;
-    max-height: 150px
-}
-
-.infoProduct {
-    margin-top: 1rem;
-}
-
-.infoProduct h3 {
-    font-size: 1.2rem;
-    margin-bottom: 0.5rem;
-    color: #2c3e50;
-}
-
-.infoProduct p {
-    margin: 0.5rem 0;
-    color: #34495e;
-}
-
-#addProductToCart {
-    background-color: #3498db;
-    color: #fff;
-    border: none;
-    padding: 10px 15px;
-    font-size: 16px;
-    cursor: pointer;
-    border-radius: 4px;
-    transition: background-color 0.3s;
-    margin: 5px;
-}
-
-#addProductToCart:hover {
-    background-color: #2980b9;
-}
-
-.products-container {
-    margin-top: auto;
+aside {
+    padding: 2rem;
+    padding-right: 0;
+    color: white;
+    position: sticky;
+    top: 0;
+    height: 100vh;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
 }
+
+.logo {
+    font-weight: 400;
+    font-size: 1.3rem;
+}
+
+.menu {
+    display: flex;
+    flex-direction: column;
+    gap: .5rem;
+}
+
+.boton-menu {
+    background-color: transparent;
+    border: 0;
+    color: white;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    font-weight: 600;
+    padding: 1rem;
+    font-size: .85rem;
+    width: 100%;
+}
+
+.boton-menu.active {
+    background-color: white;
+    color: #F4CBE3;
+    border-top-left-radius: 1rem;
+    border-bottom-left-radius: 1rem;
+    position: relative;
+}
+
+.boton-menu.active::before {
+    content: '';
+    position: absolute;
+    width: 1rem;
+    height: 2rem;
+    bottom: 100%;
+    right: 0;
+    background-color: transparent;
+    border-bottom-right-radius: .5rem;
+    box-shadow: 0 1rem 0 white;
+}
+
+.boton-menu.active::after {
+    content: '';
+    position: absolute;
+    width: 1rem;
+    height: 2rem;
+    top: 100%;
+    right: 0;
+    background-color: transparent;
+    border-top-right-radius: .5rem;
+    box-shadow: 0 -1rem 0 white;
+}
+
+.boton-menu > i.bi-hand-index-thumb-fill,
+.boton-menu > i.bi-hand-index-thumb {
+    transform: rotateZ(90deg);
+}
+
+.boton-carrito {
+    margin-top: 2rem;
+}
+
+.numerito {
+    background-color: white;
+    color: #F4CBE3;
+    padding: .15rem .25rem;
+    border-radius: .25rem;
+}
+
+.boton-carrito.active .numerito {
+    background-color: #F4CBE3;
+    color: white;
+}
+
+.texto-footer {
+    color: white;
+    font-size: .85rem;
+}
+
+main {
+    background-color: white;
+    margin: 1rem;
+    margin-left: 0;
+    border-radius: 2rem;
+    padding: 3rem;
+}
+
+
+
+.contenedor-productos {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 1rem;
+}
+
+.producto-imagen{
+    max-width: 100%;
+    border-radius: 1rem;
+}
+
+.producto-detalles {
+    background-color: #F4CBE3;
+    color: white;
+    padding: .5rem;
+    border-radius: 1rem;
+    margin-top: -2rem;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: .25rem;
+}
+
+.producto-titulo {
+    font-size: 1rem;
+}
+
+.titulo-principal{
+    color: #F4CBE3;
+}
+
+.producto-agregar {
+    border: 0;
+    background-color: white;
+    color: #F4CBE3;
+    padding: .4rem;
+    text-transform: uppercase;
+    border-radius: 2rem;
+    cursor: pointer;
+    border: 2px solid white;
+    transition: background-color .2s, color .2s;
+}
+
+.producto-agregar:hover {
+    background-color: #F4CBE3;
+    color: white;
+}
+
+
+.close-menu {
+    display: none;
+}
+
+.disabled {
+    display: none;
+}
+
 
 .pagination-buttons {
     display: flex;
@@ -78,8 +202,8 @@ body {
 }
 
 .pagination-buttons a {
-    background-color: #3498db;
-    color: #fff;
+    background-color: #F4CBE3;
+    color: white;
     padding: 8px 12px;
     text-decoration: none;
     border-radius: 4px;
@@ -87,12 +211,12 @@ body {
 }
 
 .pagination-buttons a:hover {
-    background-color: #2980b9;
+    background-color: #F4CBE3;
 }
 
 .pagination-buttons button {
-    background-color: #3498db;
-    color: #fff;
+    background-color: #F4CBE3;
+    color: white;
     border: none;
     padding: 10px 15px;
     font-size: 16px;
@@ -103,13 +227,13 @@ body {
 }
 
 .pagination-buttons button:hover {
-    background-color: #2980b9;
+    background-color: #F4CBE3;
 }
 
 .left,
 .right {
-    background-color: #3498db;
-    color: #fff;
+    background-color: #F4CBE3;
+    color: white;
     border: none;
     padding: 10px 15px;
     font-size: 16px;
@@ -121,7 +245,7 @@ body {
 
 .left:hover,
 .right:hover {
-    background-color: #2980b9;
+    background-color: #F4CBE3;
 }
 
 .right {
