--- a/EntregaIntegradora/src/public/css/signup.css
+++ b/EntregaIntegradora/src/public/css/signup.css
@@ -6,7 +6,7 @@
 
 body {
     font-family: 'Arial', sans-serif;
-    background-color: #f2f2f2;
+    background-color: #F4CBE3;
 }
 
 .login-container {
@@ -17,7 +17,7 @@ body {
 }
 
 .signup-form {
-    background-color: #ecf0f1;
+    background-color: white;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -27,7 +27,7 @@ body {
 .signup-form h2 {
     text-align: center;
     margin-bottom: 20px;
-    color: #3498db;
+    color: #2c3e50;
 }
 
 .form-group {
@@ -43,7 +43,7 @@ body {
 .form-group input {
     width: 100%;
     padding: 10px;
-    border: 1px solid #3498db;
+    border: 1px solid #F4CBE3;
     border-radius: 4px;
 }
 
@@ -52,7 +52,7 @@ body {
 }
 
 button#signup {
-    background-color: #3498db;
+    background-color: #F4CBE3;
     color: #fff;
     border: none;
     padding: 10px 15px;
@@ -63,5 +63,5 @@ button#signup {
 }
 
 button#signup:hover {
-    background-color: #2980b9;
+    background-color: #ff33aa;
 }
