--- a/EntregaIntegradora/src/views/login.handlebars
+++ b/EntregaIntegradora/src/views/login.handlebars
@@ -14,5 +14,9 @@
     </div>
     <button id="login" type="submit">Ingresar</button>
   </form>
+      <div>
+      <a href="/api/sessions/github"><button>Login with GitHub</button></a>
+    </div>
+
 </div>
 <script src="js/login.js"></script>
