--- a/EntregaIntegradora/src/public/css/login.css
+++ b/EntregaIntegradora/src/public/css/login.css
@@ -67,3 +67,18 @@ h1, h2, h3, h4, h5, h6, p, a, input, textarea, ul {
 #login:hover {
   background-color: #ff33aa;
 }
+
+button.github {
+  background-color: #ff33aa;
+  color: #fff;
+  border: none;
+  padding: 10px 15px;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 4px;
+  transition: background-color 0.3s;
+}
+
+button.github:hover {
+  background-color: #F4CBE3;
+}
