--- a/EntregaIntegradora/src/public/css/login.css
+++ b/EntregaIntegradora/src/public/css/login.css
@@ -16,7 +16,7 @@ h1, h2, h3, h4, h5, h6, p, a, input, textarea, ul {
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: #F4CBE3; /* Cambiado a color de fondo deseado */
+  background-color: #F4CBE3;
 }
 
 .login-form {
@@ -54,8 +54,8 @@ h1, h2, h3, h4, h5, h6, p, a, input, textarea, ul {
 }
 
 #login {
-  background-color: #F4CBE3; /* Cambiado a color de fondo deseado */
-  color: white; /* Cambiado a color de texto deseado */
+  background-color: #F4CBE3;
+  color: white;
   border: none;
   padding: 10px 15px;
   font-size: 16px;
@@ -69,16 +69,40 @@ h1, h2, h3, h4, h5, h6, p, a, input, textarea, ul {
 }
 
 button.github {
-  background-color: #ff33aa;
-  color: #fff;
+  margin: 25px;
+  background-color: white;
+  color: black;
   border: none;
   padding: 10px 15px;
   font-size: 16px;
   cursor: pointer;
   border-radius: 4px;
   transition: background-color 0.3s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+a{
+  text-decoration: none;
 }
 
 button.github:hover {
-  background-color: #F4CBE3;
+  background-color: #ff33aa;
+}
+
+.imagen-github{
+  width: 40px;
+  height: 40px;
+  margin-right: 10px;
+  border-radius: 40%;
+}
+
+.container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: #F4CBE3;
 }
