intento de purchase

--- a/EntregaIntegradora/src/views/carts.handlebars
+++ b/EntregaIntegradora/src/views/carts.handlebars
@@ -47,7 +47,7 @@
                     <div class="carrito-acciones-derecha">
                         <div class="carrito-acciones-total">
                             <p>Total:</p>
-                            <p id="total">$</p>
+                            <p id="total">${{this.totalPrice}}</p>
                         </div>
                         <button id="carrito-acciones-comprar" class="carrito-acciones-comprar">Comprar ahora</button>
                     </div>
