--- a/EntregaIntegradora/src/views/products.handlebars
+++ b/EntregaIntegradora/src/views/products.handlebars
@@ -13,7 +13,7 @@
                         <button id="todos" class="boton-menu boton-categoria active"><i class="bi bi-hand-index-thumb-fill"></i> Todos los productos</button>
                     </li>
                     <li>
-                        <a class="boton-menu boton-carrito" href="#">
+                        <a id="btnToCart" class="boton-menu boton-carrito" href="#" >
                             <i class="bi bi-cart-fill"></i> Carrito <span id="numerito" class="numerito">0</span>
                         </a>
                     </li>
@@ -36,11 +36,10 @@
                             <p>{{this.description}}</p>
                             <p class="producto-precio">${{this.price}}</p>
                             <p id="productID" class="invisible" >{{this._id}}</p>
-                            <button id="addProductToCart" class="producto-agregar">Agregar al carrito</button>
+                            <button data-product-id="{{this._id}}" class="producto-agregar addProductToCart">Agregar al carrito</button>
                         </div>                     
                     </div>
                 {{/each}}
-                <p class="invisible" id="cartID">{{this.cart}}</p>
             </div>
                     <div class="pagination-buttons">
             {{#if hasPrevPage}}
