--- a/EntregaIntegradora/src/views/carts.handlebars
+++ b/EntregaIntegradora/src/views/carts.handlebars
@@ -42,16 +42,17 @@
 
                 <div id="carrito-acciones" class="carrito-acciones">
                     <div class="carrito-acciones-izquierda">
-                        <button id="carrito-acciones-vaciar" class="carrito-acciones-vaciar">Vaciar carrito</button>
+                        <button id="btn-delete-cart" class="carrito-acciones-vaciar">Vaciar carrito</button>
                     </div>
                     <div class="carrito-acciones-derecha">
                         <div class="carrito-acciones-total">
                             <p>Total:</p>
                             <p id="total">${{this.totalPrice}}</p>
                         </div>
-                        <button id="carrito-acciones-comprar" class="carrito-acciones-comprar">Comprar ahora</button>
+                        <button id="btn-to-purchase" class="carrito-acciones-comprar">Comprar ahora</button>
                     </div>
                 </div>
             </div>
         </main>
     </div>
+<script src="../js/carts.js"></script>
