--- a/EntregaIntegradora/src/views/products.handlebars
+++ b/EntregaIntegradora/src/views/products.handlebars
@@ -14,7 +14,7 @@
                     </li>
                     <li>
                         <a id="btnToCart" class="boton-menu boton-carrito" href="#" >
-                            <i class="bi bi-cart-fill"></i> Carrito <span id="numerito" class="numerito">0</span>
+                            <i class="bi bi-cart-fill"></i> Carrito <span id="numerito" class="numerito">{{this.cartItemCount}}</span>
                         </a>
                     </li>
                 </ul>
