--- a/EntregaIntegradora/src/views/forgotPass.handlebars
+++ b/EntregaIntegradora/src/views/forgotPass.handlebars
@@ -7,3 +7,4 @@
     </div>
     <button id="recoverPassword" type="submit">Recuperar</button>
   </form>
+<script src="js/forgotPassword.js"></script>
