--- a/EntregaIntegradora/src/views/newPassword.handlebars
+++ b/EntregaIntegradora/src/views/newPassword.handlebars
@@ -3,8 +3,8 @@
     <div class="form-group">
 
       <label for="newPassword">Nueva contraseña:</label>
-      <input type="text" id="newPassword" name="email" required />
+      <input type="password" id="newPassword" name="password" required />
     </div>
-    <button id="updatePassword" type="submit">Recuperar</button>
+    <button id="updatePassword" type="submit">Cambiar contraseña</button>
   </form>
-<script src="js/newPassword.js"></script>
+<script src="/js/newPassword.js"></script>
