--- a/EntregaIntegradora/src/views/products.handlebars
+++ b/EntregaIntegradora/src/views/products.handlebars
@@ -52,5 +52,6 @@
         </main>
         
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="/js/products.js"></script>
     
