--- a/EntregaIntegradora/src/views/user.handlebars
+++ b/EntregaIntegradora/src/views/user.handlebars
@@ -1,22 +1,24 @@
-<div>
-    <form id="setRoleForm">
-        <label for="id">id:</label>
-        <input id="userId" type="text">
-        <label>Rol:</label>
-        <select id="role">
-            <option value="admin">admin</option>
-            <option value="user">user</option>
-            <option value="premium">premium</option>
-        </select>
-            <button>Asignar rol</button>
+<div class="All">
+    <div>
+        <form id="setRoleForm">
+            <label for="id">id:</label>
+            <input id="userId" type="text">
+            <label>Rol:</label>
+            <select id="role">
+                <option value="admin">admin</option>
+                <option value="user">user</option>
+                <option value="premium">premium</option>
+            </select>
+                <button>Asignar rol</button>
 
-    </form>
-</div>
-<div>
-    <form id="deleteUserForm">
-        <input type="text" id="deleteUserId">
-        <label for="id">id del usuario a eliminar</label>
-        <button type="submit">Eliminar usuario</button>
-    </form>
+        </form>
+    </div>
+    <div>
+        <form id="deleteUserForm">
+            <label for="id">id del usuario a eliminar:</label>
+            <input type="text" id="deleteUserId">
+            <button type="submit">Eliminar usuario</button>
+        </form>
+    </div>
 </div>
 <script src="/js/user.js"></script>
